Grep through pipeline rule source