@@ -42,6 +42,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.net.URI;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -128,22 +129,39 @@ class InputsResourceTest {
     }
 
     @Test
-    void testReferences() {
+    void testStreamReferences() {
         when(streamRuleService.loadForInput("inputId")).thenReturn(List.of(
-                new StreamRuleMock(Map.of("_id", "ruleId", "stream_id", "streamId"))
+                new StreamRuleMock(Map.of("_id", "ruleId1", "stream_id", "streamId1")),
+                new StreamRuleMock(Map.of("_id", "ruleId2", "stream_id", "streamId2"))
         ));
-        when(streamService.streamTitleFromCache("streamId")).thenReturn("streamTitle");
-        when(pipelineService.loadByInputId("inputId")).thenReturn(
-                List.of(PipelineDao.builder().id("pipelineId").title("pipelineTitle").source("source").build())
+        when(streamService.streamTitleFromCache("streamId1")).thenReturn("streamTitle1");
+        when(streamService.streamTitleFromCache("streamId2")).thenReturn("streamTitle2");
+        when(pipelineService.loadBySourcePattern("inputId")).thenReturn(Collections.emptyList());
+
+        final List<InputsResource.InputReference> expected = List.of(
+                new InputsResource.InputReference("streamId1", "streamTitle1"),
+                new InputsResource.InputReference("streamId2", "streamTitle2"));
+        final InputsResource.InputReferences refs = inputsResource.getReferences("inputId");
+
+        assertThat(refs.streamRefs()).hasSize(2);
+        assertThat(refs.streamRefs()).containsAll(expected);
+    }
+
+    @Test
+    void testPipelineReferences() {
+        when(streamRuleService.loadForInput("inputId")).thenReturn(Collections.emptyList());
+        when(pipelineService.loadBySourcePattern("inputId")).thenReturn(
+                List.of(PipelineDao.builder().id("pipelineId1").title("pipelineTitle1").source("source1").build(),
+                        PipelineDao.builder().id("pipelineId2").title("pipelineTitle2").source("source2").build())
         );
-        when(pipelineStreamConnectionsService.loadByPipelineId("pipelineId")).thenReturn(
-                Set.of(PipelineConnections.create("pipelineId", "streamId", Set.of("pipelineId")))
+        when(pipelineStreamConnectionsService.loadByPipelineId("pipelineId1")).thenReturn(
+                Set.of(PipelineConnections.create("id1", "streamId1", Set.of("pipelineId1", "pipelineId99")))
         );
+        when(pipelineStreamConnectionsService.loadByPipelineId("pipelineId2")).thenReturn(Collections.emptySet());
 
         final InputsResource.InputReferences refs = inputsResource.getReferences("inputId");
 
-        assertThat(refs.streamRefs().size()).isEqualTo(1);
-        assertThat(refs.pipelineRefs().size()).isEqualTo(1);
+        assertThat(refs.pipelineRefs()).hasSize(1);
     }
 
     private InputCreateRequest getCR(boolean global) {
